@@ -1,3 +1,8 @@
+Changes in <next version>:
+ * Change in build system to use qmake to find Qt locations. This is to fix
+   the build inside Anaconda. Also Qt and sip parameters can now be given
+   as environment variables.
+
 Changes in 3.0:
  * New 3D support for plotting points, functions, surfaces and volumes
  * Add --export-option parameter for command line exporting control
